Feature to show all legal moves